--- a/package.json
+++ b/package.json
@@ -8,5 +8,17 @@
   },
   "author": "Vieolo OÜ",
   "license": "UNLICENSED",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "enzyme": "^3.11.0",
+    "fork-ts-checker-webpack-plugin": "^6.0.7",
+    "jest": "^26.6.3",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
