Added basic structure of the project

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@vieolo/vieolo-ui",
   "version": "0.0.1",
   "description": "The React UI components of Vieolo",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest"
   },
