--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "The React UI components of Vieolo",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "author": "Vieolo OÜ",
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "@storybook/react": "^6.1.17",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "enzyme": "^3.11.0",
