--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.17",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "css-loader": "^5.0.2",
     "enzyme": "^3.11.0",
     "fork-ts-checker-webpack-plugin": "^6.0.7",
     "jest": "^26.6.3",
+    "sass": "^1.32.7",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
