--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "@storybook/addon-essentials": "^6.1.17",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.17",
     "@types/react": "^17.0.0",
