--- a/package.json
+++ b/package.json
@@ -4,25 +4,34 @@
   "description": "The React UI components of Vieolo",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --runInBand",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "author": "Vieolo OÜ",
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "@babel/preset-env": "^7.12.16",
     "@storybook/addon-essentials": "^6.1.17",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.17",
+    "@types/enzyme": "^3.10.8",
+    "@types/jest": "^26.0.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "babel-jest": "^26.6.3",
     "css-loader": "^5.0.2",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.1",
     "fork-ts-checker-webpack-plugin": "^6.0.7",
     "jest": "^26.6.3",
+    "jsdom": "^16.4.0",
+    "regenerator-runtime": "^0.13.7",
     "sass": "^1.32.7",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
