--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fork-ts-checker-webpack-plugin": "^6.0.7",
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
+    "react-icons": "^4.2.0",
     "regenerator-runtime": "^0.13.7",
     "sass": "^1.32.7",
     "sass-loader": "^10.1.1",
