--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@vieolo/validation-js": "github:Vieolo/validation-js#master",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
