--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vieolo-ui",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/export.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -20,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "dist": "tsc --build \"./tsconfig.json\"",
+    "build-components": "tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
