--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,16 +17,26 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "outDir": "./dist",
+    "noImplicitAny": true,
+    "declaration": true,
+    "noEmit": true
   },
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "exclude": [
     "node_modules",
     "**/*.test.ts",
     "**/*.test.tsx",
     "**/*.stories.tsx",
-    "./src/setupTests.ts"
+    "./src/setupTests.ts",
+    "./src/App.tsx",
+    "./src/index.tsx",
+    "./src/reportWebVitals.ts"
   ],
-  "files": ["./src/index.tsx"]
+  "files": [
+    "./src/export.ts"
+  ]
 }
