--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "outDir": "./dist",
     "noImplicitAny": true,
     "declaration": true,
-    "noEmit": true
+    "noEmit": false
   },
   "include": [
     "src"
