--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@vieolo/date": "github:Vieolo/date-js#master",
-    "@vieolo/validation-js": "github:Vieolo/validation-js#master",
+    "@vieolo/validation-js": "github:Vieolo/validation-js#0.1.2",
     "pdfjs-dist": "^2.9.359",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
