--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
-    "node-sass": "^6.0.1",
     "react-scripts": "^4.0.3",
+    "sass": "^1.43.4",
     "typescript": "^4.3.2",
     "web-vitals": "^2.0.1"
   },
