--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "@types/react-router-dom": "^5.3.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "sass": "^1.43.4",
     "typescript": "^4.3.2",
