--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@vieolo/date": "github:Vieolo/date-js#master",
+    "@vieolo/parsers": "github:Vieolo/parsers-js#0.2.4",
     "@vieolo/regex-library": "github:Vieolo/regex-library-js#0.1.3",
     "@vieolo/validation-js": "github:Vieolo/validation-js#0.1.2",
     "d3": "^7.2.1",
