--- a/package.json
+++ b/package.json
@@ -41,9 +41,7 @@
     "@vieolo/regex-library": "github:Vieolo/regex-library-js#0.1.3",
     "@vieolo/validation-js": "github:Vieolo/validation-js#0.1.2",
     "d3": "^7.2.1",
-    "pdfjs-dist": "^2.9.359",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "pdfjs-dist": "^2.9.359"
   },
   "scripts": {
     "start": "react-scripts start",
