Setup base Cypress

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,5 +27,46 @@
                 "cwd": "${workspaceFolder}"
             }
         },
+        {
+            "label": "End 2 End Test",
+            "dependsOrder": "parallel",
+            "dependsOn": [
+                "Frontend Test Server",
+                "Cypress Test Server"
+            ],
+            "problemMatcher": []
+        },     
+        {
+            "label": "Frontend Test Server",
+            "type": "shell",
+            "command": "npm",
+            "args": [
+                "run",
+                "e2e-server"
+            ],
+            "group": "test",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "presentation": {
+                "panel": "dedicated"
+            }
+        },
+        {
+            "label": "Cypress Test Server",
+            "type": "shell",
+            "command": "npx",
+            "args": [
+                "cypress",
+                "open"
+            ],
+            "group": "test",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "presentation": {
+                "panel": "dedicated"
+            }
+        }
     ]
 }
