--- a/package.json
+++ b/package.json
@@ -24,18 +24,26 @@
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "@types/react-router-dom": "^5.3.2",
+    "cypress": "^9.7.0",
+    "cypress-file-upload": "^5.0.8",
+    "@cypress/code-coverage": "^3.9.12",
+    "@cypress/instrument-cra": "^1.4.0",
+    "@cypress/react": "^5.12.5",
+    "@cypress/webpack-dev-server": "^1.8.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "sass": "^1.43.4",
     "typescript": "^4.3.2",
-    "web-vitals": "^2.0.1"
+    "web-vitals": "^2.0.1",
+    "react": "^17.0.2",    
+    "react-dom": "^17.0.2"
   },
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
-    "@vieolo/date": "github:Vieolo/date-js#master",
+    "@vieolo/date": "github:Vieolo/date-js#1.0.0",
     "@vieolo/device-js": "^0.1.1",
     "@vieolo/parsers": "github:Vieolo/parsers-js#0.2.4",
     "@vieolo/regex-library": "github:Vieolo/regex-library-js#0.1.3",
@@ -50,7 +58,8 @@
     "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!(date_utility|country_data|react_validation|@vieolo|onetruck-pdf-processing|d3*|internmap|robust-predicates))\" --env=jsdom --runInBand",
     "test-update": "react-scripts test --transformIgnorePatterns \"node_modules/(?!(date_utility|country_data|react_validation|@vieolo|onetruck-pdf-processing|d3*|internmap|robust-predicates))\" --env=jsdom --runInBand --updateSnapshot",
     "test-coverage": "npm run test -- --coverage --watchAll=false",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "e2e-server": "BROWSER=none react-scripts -r @cypress/instrument-cra start"
   },
   "eslintConfig": {
     "extends": [
