--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@mui/material": "^5.0.4",
     "@vieolo/date": "github:Vieolo/date-js#1.0.0",
     "@vieolo/device-js": "^0.1.1",
+    "@vieolo/file-management": "github:Vieolo/file-management-js#0.2.11",
     "@vieolo/parsers": "github:Vieolo/parsers-js#0.2.4",
     "@vieolo/regex-library": "^0.1.4",
     "@vieolo/validation-js": "github:Vieolo/validation-js#0.1.2",
