--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-router-dom": "^5.3.2",
     "cypress": "^11.1.0",
     "cypress-file-upload": "^5.0.8",
+    "cypresstools": "file:cypressTools",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
