--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@vieolo/validation-js": "github:Vieolo/validation-js#0.1.2",
     "d3": "^7.6.1",
     "pdfjs-dist": "^2.9.359",
+    "react-cropper": "^2.1.8",
     "react-router-dom": "^5.2.0"
   },
   "scripts": {
