Updated the VDate and parsers

--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
-    "@vieolo/date": "github:Vieolo/date-js#1.0.0",
     "@vieolo/device-js": "^0.1.6",
     "@vieolo/file-management": "github:Vieolo/file-management-js#0.2.11",
-    "@vieolo/parsers": "github:Vieolo/parsers-js#0.2.4",
+    "@vieolo/parsers": "github:Vieolo/parsers-js#0.2.7",
     "@vieolo/validation-js": "github:Vieolo/validation-js#0.3.0",
+    "@vieolo/vdate": "^2.0.0",
     "d3": "^7.6.1",
     "pdfjs-dist": "^2.9.359",
     "react-cropper": "^2.1.8",
