--- a/cypressTools/package.json
+++ b/cypressTools/package.json
@@ -12,7 +12,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "@vieolo/date": "github:Vieolo/date-js#1.0.0",
+    "@vieolo/vdate": "^2.0.0",
     "cypress": "^11.1.0"
   }
 }
