--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@vieolo/vieolo-ui",
   "version": "0.29.1",
-  "private": true,
   "main": "dist/export.js",
   "author": {
     "name": "Vieolo OÜ"
@@ -44,9 +43,9 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
     "@vieolo/device-js": "^0.1.6",
-    "@vieolo/file-management": "github:Vieolo/file-management-js#0.2.11",
-    "@vieolo/parsers": "github:Vieolo/parsers-js#0.2.7",
-    "@vieolo/validation-js": "github:Vieolo/validation-js#0.3.0",
+    "@vieolo/file-management": "^0.4.0",
+    "@vieolo/parsers": "^0.3.0",
+    "@vieolo/validation": "^0.4.0",
     "@vieolo/vdate": "^2.0.0",
     "d3": "^7.6.1",
     "pdfjs-dist": "^2.9.359",
