--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,10 @@
-public/
-cypress/
 .nyc_output/
 .vscode/
+coverage/
+cypress/
+cypressToolsSource/
+node_modules/
+public/
 cypress.json
 version_bump.mjs
 export_rewrite.mjs
