--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vieolo/vieolo-ui",
-  "version": "0.31.19",
+  "version": "0.31.20",
   "main": "export.js",
   "author": {
     "name": "Vieolo OÜ"
@@ -48,7 +48,7 @@
     "@vieolo/validation": "^0.4.0",
     "@vieolo/vdate": "^2.2.2",
     "d3": "^7.9.0",
-    "pdfjs-dist": "^2.9.359",
+    "pdfjs-dist": "2.9.359",
     "react-cropper": "^2.1.8",
     "react-redux": "8.0.5",
     "react-router-dom": "^5.2.0"
